# EntangledHome-Assistant

./: .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: ci.yml
adapter_service/: README.md  __init__.py  embeddings.py  main.py  model.py  schema.py
adapter_service/tests/: test_embeddings.py  test_interpret_endpoint.py  test_model_client.py  test_settings.py
custom_components/entangledhome/: __init__.py  adapter_client.py  catalog.py  config_flow.py  const.py  conversation.py  coordinator.py  diagnostics.py  embeddings.py  exporter.py  intent_handlers.py  manifest.json  models.py  secondary_signals.py  strings.json  telemetry.py
custom_components/entangledhome/helpers/: __init__.py  color_maps.py
custom_components/entangledhome/sentences/en/: media_play.yaml  scene_activate.yaml  set_brightness.yaml  turn_off.yaml  turn_on.yaml
docs/: migration.md  sentences.md  troubleshooting.md
docs/examples/: homeassistant_configuration.yaml  intents.yaml  sentences.en.yaml
homeassistant/: __init__.py  config_entries.py  core.py
homeassistant/components/: __init__.py  conversation.py
homeassistant/helpers/: __init__.py  update_coordinator.py
scripts/: __init__.py  _qdrant.py  ingest_entities.py  ingest_plex.py  setup_env.sh
tests/: __init__.py  conftest.py  test_adapter_client.py  test_ci_workflow.py  test_config_flow.py  test_config_options_flow.py  test_conversation_guardrails.py  test_conversation_logging.py  test_conversation_setup.py  test_coordinator_payloads.py  test_diagnostics.py  test_documentation.py  test_exporter.py  test_guardrail_config_parsing.py  test_ingest_scripts.py  test_integration_clients.py  test_integration_smoke.py  test_intent_handlers.py  test_models.py  test_options_defaults.py  test_secondary_signals.py  test_telemetry.py  test_tooling_configuration.py
tests/stubs/homeassistant/: __init__.py  config_entries.py  core.py
tests/stubs/homeassistant/components/: __init__.py  conversation.py
tests/stubs/homeassistant/helpers/: __init__.py  (+1 more)
