[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entangledhome-assistant"
version = "0.1.0"
description = "Home Assistant custom component placeholder project"
requires-python = ">=3.13"
license = { text = "BSL-1.1" }

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-homeassistant-custom-component",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[tool.uv]
python = "3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
