[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entangledhome-assistant"
version = "0.1.0"
description = "Home Assistant custom component placeholder project"
requires-python = ">=3.13"
license = { text = "BSL-1.1" }
dependencies = [
    "httpx>=0.27,<0.28",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-homeassistant-custom-component",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[tool.uv]
# other uv-specific settings (no python version key here)
index-url = "https://pypi.org/simple"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
