[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entangledhome-assistant"
version = "0.1.0"
description = "Home Assistant custom component placeholder project"
requires-python = ">=3.13"
license = { text = "BSL-1.1" }
dependencies = [
    "homeassistant>=2025.4.4",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-homeassistant-custom-component",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
